# lifehash-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint_and_build.yml
src/: lib.rs  lifehash.rs  main.rs
src/colors/: functions.rs  gradient.rs  hsb.rs  mod.rs  rgb.rs
src/grids/: cell_grid.rs  change_grid.rs  color_grid.rs  frac_grid.rs  mod.rs
src/utils/: bits.rs  mod.rs
tests/: all_tests.rs  cli_tests.rs  color_tests.rs  io_tests.rs  version_tests.rs
