[package]
name = "lifehash"
version = "0.1.0"
edition = "2021"
description = "A Lifehash implementation in Rust"
license = "Apache-2.0"

[lib]
name="lifehash_lib"
path="src/lib.rs"

[[bin]]
name="lifehash"
path="src/main.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
hex = "0.4.3"
png = "0.17.16"
sha2 = "0.10.8"

[dev-dependencies]
tempfile = "3.16.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }